--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
             <div class="box1 box">
                 <div class="boxcontent1">
                     <h2>Winter Collection</h2>
-                    <div class="box1img" style=" background-image: url('box1_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box1_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
             </div>
             <div class="box2 box">
                 <div class="boxcontent1">
                     <h2>Top Deals</h2>
-                    <div class="box1img" style=" background-image: url('box2_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box2_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
             </div>
             <div class="box3 box"><div class="boxcontent1">
                 <h2>Furniture</h2>
-                <div class="box1img" style=" background-image: url('box3_image.jpg');"></div>
+                <div class="box1img" style=" background-image: url('box3_image(1).jpg');"></div>
                 <p>See more</p>
             </div></div>
             <div class="box4 box">
                 <div class="boxcontent1">
                     <h2>Amazon Gadgets store</h2>
-                    <div class="box1img" style=" background-image: url('box4_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box4_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
                 
@@ -120,26 +120,26 @@
             <div class="box1 box">
                 <div class="boxcontent1">
                     <h2>Makeup & Cosmetics</h2>
-                    <div class="box1img" style=" background-image: url('box5_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box5_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
             </div>
             <div class="box2 box">
                 <div class="boxcontent1">
                     <h2>Toys under $25</h2>
-                    <div class="box1img" style=" background-image: url('box6_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box6_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
             </div>
             <div class="box3 box"><div class="boxcontent1">
                 <h2>Limited Deals</h2>
-                <div class="box1img" style=" background-image: url('box7_image.jpg');"></div>
+                <div class="box1img" style=" background-image: url('box7_image(1).jpg');"></div>
                 <p>See more</p>
             </div></div>
             <div class="box4 box">
                 <div class="boxcontent1">
                     <h2>Fashion</h2>
-                    <div class="box1img" style=" background-image: url('box8_image.jpg');"></div>
+                    <div class="box1img" style=" background-image: url('box8_image(1).jpg');"></div>
                     <p>See more</p>
                 </div>
                 </div>
